--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,33 @@
 /*  your css code here. If applicable */
+.container{
+	width:240px;
+	height:100px;
+	border:2px solid black;
+	border-radius:30px;
+	background-color:gray;
+}
+.green{
+	width:50px;
+	height:50px;
+	background-color:green;
+	border-radius:50%;
+	display:inline-block;
+	margin-top:25px;
+	margin-left:25px;
+}
+.yellow{
+	width:50px;
+	height:50px;
+	background-color:yellow;
+	border-radius:50%;
+	display:inline-block;
+	margin-left:10px;
+}
+.red{
+	width:50px;
+	height:50px;
+	background-color:red;
+	border-radius:50%;
+	display:inline-block;
+	margin-left:10px;
+}
